syntax = "proto3";
option java_package = "rpc";
package protobuf;
option java_outer_classname = "RpcRequests";
import "raft.proto";

message PingRequest {
    int64 send_timestamp = 1;
}

message AppendEntriesRequests{
     repeated AppendEntriesRequest args = 1;
}

message AppendEntriesResponses{
     repeated AppendEntriesResponse args = 1;
}

message ErrorResponse{
    int64 errorCode = 1;
    string errorMsg = 2;
}

message TimeoutNowRequest{
    string server_id = 1;
    string peer_id = 2;
    int64 term = 3;
}
message TimeoutNowResponse{
     int64 term = 1;
     bool success = 2;
}

message RequestVoteRequest {
     string server_id = 1;
     string peer_id = 2;
     int64 term = 3;
     int64 last_log_term = 4;
     int64 last_log_index = 5;
     bool pre_vote = 6;
};
message RequestVoteResponse {
     int64 term = 1;
     bool granted = 2;
     string peer_name = 3;
};


message RequestPreVoteRequest {
     string server_id = 1;
     string peer_id = 2;
     int64 term = 3;
     int64 last_log_term = 4;
     int64 last_log_index = 5;
     bool pre_vote = 6;
};
message RequestPreVoteResponse {
     int64 term = 1;
     bool granted = 2;
     string peer_name = 3;
};

message AppendEntriesRequestHeader {

     string server_id = 1;
     string peer_id = 2;
};


message AppendEntriesRequest {
     string group_id = 1;
     string server_id = 2;
     string peer_id = 3;
     int64 term = 4;
     int64 prev_log_term = 5;
     int64 prev_log_index = 6;
     EntryMeta entries = 7;
     int64 committed_index = 8;
     bytes data = 9;
     string address = 10;
     int32 port = 11;
     int32 taskPort = 12;
};

message AppendEntriesResponse {
     int64 term = 1;
     bool success = 2;
     int64 last_log_index = 3;
};
message ReadIndexRequest {
     string group_id = 1;
     string server_id = 2;
     bytes entries = 3;
     string peer_id = 4;
};

message ReadIndexResponse {
     int64 index = 1;
     bool success = 2;
};